--- a/task_manager/locale/ru/LC_MESSAGES/django.po
+++ b/task_manager/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-01 18:40+0300\n"
+"POT-Creation-Date: 2024-05-03 02:53+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,14 +16,16 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
+"(n%100>=11 && n%100<=14)? 2 : 3);\n"
 #: task_manager/mixins.py:12
 msgid "You are not logged in! You need to log in."
-msgstr "Вы не вошли в систему! Вам необходимо войти"
+msgstr "ВЫ не вошли в систему ! Вам необходимо войти"
 
 #: task_manager/statuses/forms.py:7
 #: task_manager/templates/statuses/index.html:15
+#: task_manager/templates/tasks/index.html:15
 msgid "Name"
 msgstr "Имя"
 
@@ -32,65 +34,87 @@ msgid "Statuses"
 msgstr "Статусы"
 
 #: task_manager/statuses/views.py:25
-#, fuzzy
-#| msgid "Status successfully added"
 msgid "Status successfully added"
 msgstr "Статус успешно добавлен"
 
 #: task_manager/statuses/views.py:29
 #: task_manager/templates/statuses/index.html:10
-#, fuzzy
-#| msgid "Create user"
 msgid "Create status"
-msgstr "Создать Пользователя"
+msgstr "Создать Статус"
 
-#: task_manager/statuses/views.py:30
-#, fuzzy
-#| msgid "Create user"
+#: task_manager/statuses/views.py:30 task_manager/tasks/views.py:32
 msgid "Create"
-msgstr "Создать Пользователя"
+msgstr "Создать"
 
 #: task_manager/statuses/views.py:38
-#, fuzzy
-#| msgid "Status successfully added"
 msgid "Status successfully changed"
-msgstr "Статус успешно добавлен"
+msgstr "Статус успешно изменен"
 
 #: task_manager/statuses/views.py:42
-#, fuzzy
-#| msgid "Create user"
 msgid "Update Status"
-msgstr "Создать Пользователя"
+msgstr "Изменить статус"
 
-#: task_manager/statuses/views.py:43
+#: task_manager/statuses/views.py:43 task_manager/tasks/views.py:51
 #: task_manager/templates/statuses/index.html:29
+#: task_manager/templates/tasks/index.html:34
 #: task_manager/templates/users/index.html:31 task_manager/users/views.py:45
 msgid "Update"
 msgstr "Обновить"
 
 #: task_manager/statuses/views.py:50
-#, fuzzy
-#| msgid "Status successfully added"
 msgid "Status successfully deleted"
-msgstr "Статус успешно добавлен"
+msgstr "Статус успешно удален"
 
 #: task_manager/statuses/views.py:54
-#, fuzzy
-#| msgid "Create user"
 msgid "Delete Status"
-msgstr "Создать Пользователя"
+msgstr "Удалить статус"
 
-#: task_manager/statuses/views.py:55
+#: task_manager/statuses/views.py:55 task_manager/tasks/views.py:65
 #: task_manager/templates/statuses/index.html:31
-#: task_manager/templates/users/index.html:33 task_manager/users/views.py:59
+#: task_manager/templates/tasks/index.html:36
+#: task_manager/templates/users/index.html:33 task_manager/users/views.py:61
 msgid "Delete"
 msgstr "Удалить"
+
+#: task_manager/tasks/views.py:19 task_manager/templates/navbar.html:23
+msgid "Tasks"
+msgstr "Задачи"
+
+#: task_manager/tasks/views.py:28
+msgid "Task successfully created"
+msgstr "Задача успешно создана"
+
+#: task_manager/tasks/views.py:31
+msgid "Create task"
+msgstr "Создать задачу"
+
+#: task_manager/tasks/views.py:47
+msgid "Task successfully updated"
+msgstr "Задача успешно обновлена"
+
+#: task_manager/tasks/views.py:50
+msgid "Update Task"
+msgstr "Обновить задачу"
+
+#: task_manager/tasks/views.py:59
+msgid "You can't delete this task"
+msgstr "Вы не можете удалить эту задачу"
+
+#: task_manager/tasks/views.py:61
+msgid "Task successfully deleted"
+msgstr "Задача успешно удалена"
+
+#: task_manager/tasks/views.py:64
+msgid "Delete Task"
+msgstr "Удалить задачу"
 
 #: task_manager/templates/form.html:7 task_manager/templates/home.html:10
 #: task_manager/templates/home.html:16 task_manager/templates/home.html:40
 #: task_manager/templates/home.html:50
 #: task_manager/templates/statuses/delete.html:6
 #: task_manager/templates/statuses/index.html:6
+#: task_manager/templates/tasks/delete.html:6
+#: task_manager/templates/tasks/index.html:6
 #: task_manager/templates/users/delete.html:6
 #: task_manager/templates/users/index.html:6
 msgid "Task Manager"
@@ -98,11 +122,11 @@ msgstr "Менеджер Задач"
 
 #: task_manager/templates/home.html:17
 msgid "Simple and flexible task management web application"
-msgstr "Простое и гибкое веб-приложение для управления задачами"
+msgstr "Простое и удобное веб-приложение для менджмента задач"
 
 #: task_manager/templates/home.html:27
 msgid "Get Started"
-msgstr "Начать"
+msgstr "Приступить"
 
 #: task_manager/templates/home.html:57 task_manager/templates/navbar.html:13
 #: task_manager/users/views.py:16
@@ -110,10 +134,8 @@ msgid "Users"
 msgstr "Пользователи"
 
 #: task_manager/templates/home.html:63
-#, fuzzy
-#| msgid "Log In"
 msgid "Log Off"
-msgstr "Войти"
+msgstr "Выйти"
 
 #: task_manager/templates/home.html:67 task_manager/templates/navbar.html:37
 msgid "Log In"
@@ -124,67 +146,74 @@ msgid "Sign Up"
 msgstr "Регистрация"
 
 #: task_manager/templates/navbar.html:4
-#, fuzzy
-#| msgid "Task Manager"
 msgid "Task manager"
-msgstr "Менеджер Задач"
+msgstr "Менеджер задач"
 
 #: task_manager/templates/navbar.html:20
 msgid "Labels"
 msgstr "Метки"
 
-#: task_manager/templates/navbar.html:23
-msgid "Tasks"
-msgstr "Задачи"
-
 #: task_manager/templates/navbar.html:33
-#, fuzzy
-#| msgid "Log In"
 msgid "Log Out"
-msgstr "Войти"
+msgstr "Выйти"
 
 #: task_manager/templates/statuses/delete.html:13
-#, fuzzy
-#| msgid "Are you sure that you want to delete this User ?"
 msgid "Are you sure that you want to delete this Status ?"
-msgstr "Вы уверены что хотите удалить этого пользователя ?"
+msgstr "Вы уверены что хотите удалить этот Статус ?"
 
 #: task_manager/templates/statuses/index.html:16
+#: task_manager/templates/tasks/index.html:19
 #: task_manager/templates/users/index.html:17
 msgid "Creation date"
 msgstr "Дата создания"
+
+#: task_manager/templates/tasks/delete.html:13
+msgid "Are you sure that you want to delete this Task ?"
+msgstr "Вы уверены что хотите удалить эту задачу"
+
+#: task_manager/templates/tasks/index.html:10
+msgid "Create Task"
+msgstr "Создать задачу"
+
+#: task_manager/templates/tasks/index.html:16
+msgid "Status"
+msgstr "Статус"
+
+#: task_manager/templates/tasks/index.html:17
+msgid "Author"
+msgstr "Автор"
+
+#: task_manager/templates/tasks/index.html:18
+msgid "Executor"
+msgstr "Исполнитель"
 
 #: task_manager/templates/users/delete.html:13
 msgid "Are you sure that you want to delete this User ?"
 msgstr "Вы уверены что хотите удалить этого пользователя ?"
 
 #: task_manager/templates/users/index.html:15
-#, fuzzy
-#| msgid "Users"
 msgid "Username"
-msgstr "Пользователи"
+msgstr "Имя пользователя"
 
 #: task_manager/templates/users/index.html:16
 msgid "Full name"
 msgstr "Полное имя"
 
-#: task_manager/users/forms.py:8
+#: task_manager/users/forms.py:7
 msgid "First name"
 msgstr "Имя"
 
-#: task_manager/users/forms.py:9
+#: task_manager/users/forms.py:8
 msgid "Last name"
 msgstr "Фамилия"
 
 #: task_manager/users/views.py:24
-#, fuzzy
-#| msgid "User successfully deleted"
 msgid "User is successfully registered"
-msgstr "Пользователь успешно удален"
+msgstr "Пользователь успешно зарегестрирован"
 
 #: task_manager/users/views.py:28
 msgid "Create user"
-msgstr "Создать Пользователя"
+msgstr "Создать пользователя"
 
 #: task_manager/users/views.py:29
 msgid "Register"
@@ -192,29 +221,31 @@ msgstr "Регистрация"
 
 #: task_manager/users/views.py:39 task_manager/users/views.py:54
 msgid "You can't change this profile, this is not you"
-msgstr "Вы не можете изменять этот профиль, это не ваш профиль."
+msgstr "Вы не можете изменить этот профиль, он не ваш"
 
 #: task_manager/users/views.py:41
 msgid "User Profile is successfully changed"
 msgstr "Профиль пользователя успешно изменен"
 
 #: task_manager/users/views.py:44
-#, fuzzy
-#| msgid "Create user"
 msgid "Update user"
-msgstr "Создать Пользователя"
+msgstr "Изменить пользователя"
 
 #: task_manager/users/views.py:56
+msgid "Unable to delete a user because he is being used"
+msgstr "Невозможно удалить пользователя так как он занят задачей"
+
+#: task_manager/users/views.py:58
 msgid "User successfully deleted"
 msgstr "Пользователь успешно удален"
 
-#: task_manager/users/views.py:60
+#: task_manager/users/views.py:62
 msgid "Yes, delete"
 msgstr "Да, удалить"
 
 #: task_manager/views.py:20
 msgid "You are logged in !"
-msgstr "Вы успешно вошли в систему !"
+msgstr "Вы вошли в систему !"
 
 #: task_manager/views.py:22
 msgid "Login"
