--- a/task_manager/locale/ru/LC_MESSAGES/django.po
+++ b/task_manager/locale/ru/LC_MESSAGES/django.po
@@ -314,3 +314,7 @@ msgstr "Показать"
 #: task_manager/views.py:28 task_manager/views.py:33
 msgid "You are logged out"
 msgstr "Вы разлогинены"
+
+#: task_manager/tasks/models:17
+msgid "Description"
+msgstr "Описание"
